--- a/views/partials/menu.handlebars
+++ b/views/partials/menu.handlebars
@@ -14,16 +14,16 @@
             </div>
             <ul class="nav-list">
                 <li class="nav-item">
-                    <a href="http://localhost:8081" class="nav-link">Home</a>
+                    <a href="https://otaku-shop.herokuapp.com/" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="http://localhost:8081/produtos" class="nav-link">Produtos</a>
+                    <a href="https://otaku-shop.herokuapp.com/produtos" class="nav-link">Produtos</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#account" class="nav-link scroll-link">Perfil</a>
+                    <a href="#" class="nav-link scroll-link">Perfil</a>
                 </li>
                 <li class="nav-item">
-                    <a href="http://localhost:8081/carrinho" class="nav-link icon">
+                    <a href="https://otaku-shop.herokuapp.com/carrinho" class="nav-link icon">
                         <i class="bx bx-shopping-bag"></i>
                     </a>
                 </li>
